<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.detailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView  android:id="@+id/d_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/d_date"
                android:maxLines="1" />
            <TextView
                android:id="@+id/d_hint"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text=""
                android:textColor="#41B304"
                />
            <ImageView
                android:id="@+id/d_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_very_satisfied" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                >
            <EditText android:id="@+id/d_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/d_title"
                android:maxLines="1"
                android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                >
            <EditText android:id="@+id/d_age"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/d_age"
                android:inputType="number"
                android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                >
            <EditText  android:id="@+id/d_weekno"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/d_week"
                android:inputType="number"
                android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <Spinner android:id="@+id/d_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:entries="@array/gender"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                >
            <EditText android:id="@+id/d_weight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/d_weight"
                android:inputType="numberDecimal"
                android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                >
            <EditText android:id="@+id/d_height"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/d_height"
                android:inputType="numberDecimal"
                android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/d_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:entries="@array/level"

                />
        </LinearLayout>
        <Button android:id="@+id/d_burnRateProcces_btn"
            android:layout_width="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"

            android:layout_height="wrap_content"
            android:text="@string/d_calculate_inbody"
            android:padding="6dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_shape"
            android:layout_gravity="center_horizontal"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                >
                <EditText android:id="@+id/d_BurnRate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/d_burn_rate"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                >
            <EditText android:id="@+id/d_fatPercent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/d_fat_percent"
                android:inputType="numberDecimal"
                android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                >
            <EditText android:id="@+id/d_waterPercent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/d_water_percent"
                android:inputType="numberDecimal"
                android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <EditText
            android:id="@+id/d_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:hint="@string/d_any_comment"
            android:layout_margin="7dp"
            android:gravity="start"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</RelativeLayout>
